<resources>
    <string name="app_name">The Rick and Morty</string>
    <string name="character">Персонажи</string>
    <string name="location">Локаций</string>
    <string name="episode">Эпизоды</string>
    <string name="species">Species :</string>
    <string name="name">Name :</string>
    <string name="id">Id :</string>
    <string name="image">image</string>
    <string name="dimension">Dimension :</string>
    <string name="episode_field">Episode :</string>
    <string name="log">LOG</string>
    <string name="response">Response</string>
    <string name="request">Request</string>
    <string name="search">Поиск</string>
    <string name="textview">TextView</string>
    <string name="section">Раздел:</string>
</resources>